fixing size on mobile

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -137,8 +137,7 @@
    width: 90%;
    height: 65%;
    @include media-query($on-palm) {
-     width: 80%;
-     height: 50%;
+     padding: 0 3% 3% 20%;
   }
 }
 
